--- a/openfda-project/drug_list.html
+++ b/openfda-project/drug_list.html
@@ -1,1 +1,1 @@
-<body style="background-color:#E9C2B7"><head><h1>DRUGS LIST</h1></head><ol><t><li>SILICEA<t><li>No brand name found in this index<t><li>Mezereum<t><li>Ofloxacin<t><li>Naproxen<t><li>Acne Clearning Treatment Face
+<body style="background-color:#E9C2B7"><head><h1>DRUGS LIST</h1></head><ol><t><li>SILICEA<t><li>Unknown<t><li>Mezereum<t><li>Ofloxacin<t><li>Naproxen
